tests/fail/stable/invalid_custom_regex.rs
fn main() {
    sscanf::sscanf!("", "   {:/ab(ab/}   ", String).unwrap();
}
